feat: Agregacion de mejor manejo a las listas view y las cell view